<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="@dimen/_25ssp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_in_your_info"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"/>
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat_regular"
                android:background="@drawable/bg_border_black"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray"
                android:hint="@string/email"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_black"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_12sdp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="Quên mật khẩu?"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:fontFamily="@font/montserrat_regular"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_button"
                android:paddingHorizontal="@dimen/_40sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"/>

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"/>
        </LinearLayout>


    </LinearLayout>
</layout>