<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:paddingLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/bg_border_black"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="@color/black"
                android:hint="@string/password"
                android:paddingStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_border_black"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray" />

            <EditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textPassword"
                android:hint="@string/re_enter_password"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_border_black"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDangKi"
                android:layout_width="200dp"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>