<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".old.acitivity.AddPlanActivity"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan_name"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_plan_name"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/bg_border_black"
                    android:paddingTop="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/han_muc"
                android:layout_margin="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_money"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/bg_border_black"
                    android:paddingTop="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_margin="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:background="@drawable/bg_border_black"
                    android:hint="@string/select_date_start"
                    android:gravity="center_vertical"
                    android:id="@+id/txt_select_date_start"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:layout_marginRight="5dp"
                    tools:ignore="RtlSymmetry"
                    android:paddingVertical="@dimen/_15sdp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:background="@drawable/bg_border_black"
                    android:hint="@string/select_date_start"
                    android:gravity="center_vertical"
                    android:id="@+id/txt_select_date_end"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:layout_marginRight="5dp"
                    android:paddingVertical="@dimen/_15sdp"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ghi chú"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_note"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_15ssp"
                    android:background="@drawable/bg_border_black"
                    android:paddingTop="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_continue"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:id="@+id/btn_continue"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat_regular" />
    </LinearLayout>
</layout>